@@ -2,9 +2,11 @@ changelog for all my changes as i make them so i dont forget again.
 v0.7.5:
 save compatible with 0.7.3+
     new:
-        added a way to see what power a given robot has, so no more guessing on why they are so weak today.
+        added a way to see what power a given robot has, so no more guessing on why they are so weak/strong today.
+        added a setting to toggle weather or not your ships that launch from AI-Pop worlds have there 'marines' and 'crew replaced' with 'combat robots' and 'salvage robots'
     fixes:
         removed a testing crewReplacer crew
+        fixed combat robots power and priority for nex invasions and hijack marines being swapped
     background work:
         started work on the last missing market buildings.
 
